--- a/src/css/Character.css
+++ b/src/css/Character.css
@@ -1,4 +1,4 @@
-.character-title {
+.under-title {
   color: #000000;
   font-size: 20px;
   font-family: "Bodoni Moda", serif;
@@ -18,6 +18,7 @@ p {
   font-family: "Bodoni Moda", serif;
   font-weight: 500;
   font-style: normal;
+
 }
 
 .arrow-more {
@@ -85,6 +86,7 @@ img {}
   border: none;
   font-size: 16px;
   cursor: pointer;
+  font-family: "Bodoni Moda", serif;
 }
 
 .generate-btn:hover {
