--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,60 @@ body {
   padding: 0;
   margin: 0;
   background-color: #ffffff;
-  /*cursor: url('assets/Namnlösts-3.png'), auto;*/
+}
+
+/*Title*/
+h1 {
+  color: #000000;
+  font-size: 30px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: 4px;
+}
+
+h2 {
+  font-size: 30px;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 4px;
+}
+
+h3 {
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: white;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 200;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: 200;
+  margin: 0;
+}
+
+h5 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 200;
+}
+
+p {
+  letter-spacing: 1px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.arrow-more {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0px;
+}
+
+.arrow-more,
+p {
+  margin-bottom: 20px;
 }
