--- a/src/css/ChatPage.css
+++ b/src/css/ChatPage.css
@@ -35,7 +35,7 @@
   border: 1px solid #000000;
   margin-bottom: 1rem;
   background-color: #ffffff;
-   box-shadow: 7px 7px;
+  box-shadow: 7px 7px;
 }
 
 .message img {
@@ -44,35 +44,12 @@
 }
 
 form:hover {
-  background-color: #f1f1f1;
-}
-
-form {
-  border: 1px solid #000000;
-  padding: 10px;
-  margin: 40px;
-  box-shadow: 7px 7px;
+  background-color: #ffffff;
 }
 
 .text-label {
   color: #000000;
   margin: 10px 0 0;
-}
-
-#newMessageInput {
-  padding: 10px;
-  border: 1px solid #ccc;
-  width: 90%;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  font-family: "Fira Mono", monospace;
-  font-weight: 400;
-  font-style: normal;
-}
-
-#newMessageInput:focus {
-  outline: none;
-  border-color: rgb(111, 111, 111);
 }
 
 .char-count {
@@ -118,7 +95,7 @@ form {
 
 .uploading-message {
   font-style: italic;
-  color: #555;
+  color: #555555;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
