--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,7 @@
+.navbar-container {
+  background-color: #fff;
+}
+
 .navbar {
   background-color: #000000;
   color: #fff;
@@ -23,12 +27,7 @@
   color: black;
 }
 
-.btn {
-  background-color: #fff;
-  color: black;
-  font-size: 25px;
-  border: none;
-}
+
 
 .navbar-header {
   display: flex;
@@ -36,6 +35,7 @@
   align-items: center;
   padding: 0 20px;
 }
+
 
 .brand-mark {
   display: inline-block;
@@ -70,24 +70,26 @@
 
 .user-menu {
   background-color: #000000;
-  color: #fff;
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  border: none;
 }
 
-.user-menu .btn {
-  background-color: #000000;
-  color: #ffffff;
-  font-size: 16px;
-  margin: 16px;
-
-  border: none;
+.user-menu .link {
+  color: #fff;
   text-decoration: none;
 }
 
-.user-icon-btn {
+.navbar-button .btn {
+  font-size: 18px;
+  background-color: transparent;
+  border: none;
+}
+
+.navbar-button .user-icon-btn {
+  font-size: 18px;
   background-color: transparent;
   border: none;
 }
