--- a/src/css/myPage.css
+++ b/src/css/myPage.css
@@ -78,7 +78,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
-  padding: 20px;
+  padding: 20px 0 ;
 }
 
 .post {
