--- a/src/css/CharacterGenerator.css
+++ b/src/css/CharacterGenerator.css
@@ -7,13 +7,7 @@
 }
 
 .category-box h3 {
-  cursor: pointer;
-  margin-bottom: 5px;
-  font-size: 20px;
-  font-family: "Bodoni Moda", serif;
-  font-weight: 500;
-  font-style: normal;
-  letter-spacing: 4px;
+  color: #333;
 }
 
 .category-box ul {
