--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -5,7 +5,7 @@
 .navbar {
   background-color: #000000;
   color: #fff;
-  padding: 10px 0px;
+  padding: px 0px;
   display: flex;
   flex-direction: column;
 }
@@ -52,12 +52,15 @@
 .sub-menu-row {
   display: flex;
   justify-content: space-around;
+  align-self: center;
   border-top: 2px solid#fff;
+  padding-bottom: 10px;
 }
 
 .sub-menu-row ul {
   display: flex;
   flex-direction: row;
+ 
   padding: 0;
   margin: 0;
 }
