--- a/src/css/artGallery.css
+++ b/src/css/artGallery.css
@@ -1,77 +1,96 @@
-.art-container {
-  width: 80%;
-  overflow: hidden;
+/*hela sida*/
+.main-content {
+  display: flex;
+  flex-direction: column;
+  /* Antalet pixlar 'title-art' och 'footer' tar upp */
+  align-items: stretch;
 }
 
+/*intro*/
 .title-art {
-  background-color: black;
+  background-color: #ccc;
   padding: 20px;
   height: 350px;
   margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.title-art h3 {
-  color: white;
-  margin: 15px 15px 30px;
-}
+.under-title {}
 
 .title-info {
   padding: 20px;
   margin: 0 15px;
   background-color: #fff;
+  border: solid 2px black;
 }
 
-img {
-  max-width: 100%;
-}
-
-.search {
-  width: 80%;
-  position: relative;
-  display: flex;
-}
-
-.searchTerm {
-  width: 100%;
-  border-right: none;
-  padding: 5px;
-  outline: none;
-  color: #878787;
-}
-
-.search-bar {
+/*formen för sök*/
+.search-container {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  align-items: center;
+  margin-top: 10px;
 }
 
 .searchTerm:focus {
   color: #000000;
 }
 
+/*knappen för sök*/
 .searchButton {
-  width: 40px;
-  height: 36px;
   border: none;
-  background: none;
-  text-align: center;
-  color: #fff;
+  background-color: transparent;
   cursor: pointer;
-  font-size: 20px;
+
+}
+
+/*icon sök*/
+.searchButton i {
+  font-size: 18px;
+  color: #333;
+}
+
+
+.art-container {
+  width: 80%;
+}
+
+.title-art h3 {
+  color: #000000;
+  margin: 15px 15px 30px;
+}
+
+
+.map-img {
+  max-width: 100%;
+  border: solid 1px black;
+}
+
+.gallery-item-container {
+  background-color: #ccc;
+  margin: 10px 0;
+  padding: 20px;
 }
 
 .gallery-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 30px;
-  background-color: #000000;
-  margin: 10px 10px;
+  margin: 0 15px;
+  padding: 20px;
+  background-color: #ffffff;
+  border: solid 2px black;
+}
+
+.gallery-info h3 {
+  color: #000000;
+  margin: 0;
 }
 
 .gallery-info {
   width: 80%;
-
 }
 
 .art-description {
@@ -80,5 +99,12 @@ img {
 
 .art-description p {
 
-  color: #fff;
+  color: #333;
 }
+
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
