--- a/src/css/log-reg.css
+++ b/src/css/log-reg.css
@@ -74,3 +74,15 @@ input[type="password"]:active {
   background-color: gray;
   cursor: not-allowed;
 }
+
+.custom-file-input input[type="file"] {
+  border: none;
+  border-bottom: 2px solid black;
+  width: 100%;
+  padding: 5px 0;
+  outline: none;
+  background: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
