--- a/src/css/userPage.css
+++ b/src/css/userPage.css
@@ -32,14 +32,8 @@
   color: rgb(0, 0, 0);
 }
 
-.posts {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  padding: 20px;
-}
 
-.post {
+/*.post {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -59,7 +53,7 @@
   padding: 10px;
   font-size: 16px;
   color: #333;
-}
+}*/
 
 .no-posts-message {
   text-align: center;
