--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -1,7 +1,20 @@
-
 .no-friends {
   font-size: 18px;
   color: #666;
   text-align: center;
   margin-top: 20px;
+}
+
+.friend-name {
+  display: flex;
+  align-items: center;
+}
+
+.unread-message-text {
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  padding: 2px 6px;
+  font-size: 12px;
+  margin-left: 8px;
 }
