--- a/src/css/privateChat.css
+++ b/src/css/privateChat.css
@@ -1,7 +1,56 @@
-.left {
-  align-self: flex-start;
+.private-chat-container {
+  background-color: rgb(201, 201, 200);
+  padding: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
-.right {
-  align-self: flex-end;
+.private-msg {
+  background-color: #000000;
+  height: 350px;
+  /* Fixed height for chat window */
+  overflow-y: auto;
+  /* Enable vertical scrolling */
 }
+
+.private-msg ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.private-msg li {
+  margin: 10px 0;
+  display: flex;
+  width: 100%;
+}
+
+li.left {
+  justify-content: flex-start;
+}
+
+li.left .message-priv {
+  background-color: #434444;
+  color: #ffffff;
+}
+
+li.right {
+  justify-content: flex-end;
+}
+
+li.right .message-priv {
+  background-color: #6cb0e8;
+  color: #ffffff;
+}
+
+.message-priv {
+  max-width: 60%;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #f1f0f0;
+}
+
+.private-form input {
+  background-color: #ffffff;
+}
+
