--- a/src/css/CharacterGenerator.css
+++ b/src/css/CharacterGenerator.css
@@ -8,6 +8,7 @@
 
 .category-box h3 {
   color: #333;
+  padding-left: 20px;
 }
 
 .category-box ul {
@@ -16,4 +17,25 @@
 
 .category-box ul li {
   margin-bottom: 5px;
+}
+
+.category-box li {
+display: flex;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+@media (min-width: 1025px) {
+  .category-box {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+  }
+  .generate-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
