--- a/src/css/ChatPage.css
+++ b/src/css/ChatPage.css
@@ -9,6 +9,11 @@
   margin-top: 0.5rem;
 }
 
+.message-footer button {
+  background-color: #000000;
+  color: white;
+}
+
 .chat-container {
   padding: 20px;
 }
@@ -20,12 +25,12 @@
 .message .user-name {
   font-weight: bold;
   margin-right: 0.5rem;
-
+  margin-top: 0;
 }
 
 .message .message-text {
   display: inline;
-
+  margin-top: 0;
 }
 
 .message {
@@ -35,7 +40,6 @@
   border: 1px solid #000000;
   margin-bottom: 1rem;
   background-color: #ffffff;
-  box-shadow: 7px 7px;
 }
 
 .message img {
@@ -60,29 +64,12 @@ form:hover {
   color: red;
 }
 
-.submit {
-  color: #ffffff;
-  border: none;
-  border-radius: 20px;
-  padding: 8px 16px;
-  cursor: pointer;
-  background-color: #000000;
-  font-size: 15px;
-  font-family: "Bodoni Moda", serif;
-  font-weight: 500;
-}
-
 .file-upload-container {
   margin-bottom: 10px;
 }
 
 .file-upload-label {
-
   margin-right: 10px;
-}
-
-.file-upload-input {
-  display: none;
 }
 
 .file-upload-label .file-name {
@@ -91,73 +78,79 @@ form:hover {
   cursor: pointer;
 }
 
-
-
 .uploading-message {
   font-style: italic;
   color: #555555;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .title {
-    font-size: 50px;
+@media (min-width: 760px) and (max-width: 1024px) {
+
+  .form-desk {
+    display: flex;
+    justify-content: center;
   }
 
-  .text-label {
+  .message {
+    margin: 30px;
+    padding: 30px;
+  }
+
+  .message-footer button {
     font-size: 20px;
   }
 
-  .submit-button {
-    font-size: 15px;
+  .message .user-name {
+    font-size: 30px;
+    font-weight: 200;
   }
 
-  .char-count {
-    font-size: 15px;
+  .text-label {
+    color: #000000;
+    margin: 10px 0 10px;
   }
 
-  form {
-    width: 60%;
-    margin: 40px auto;
+  .message-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
   }
 
-  #newMessageInput {
-    margin-left: 8px;
+  .message {
+    display: flex;
+    padding: 10px;
+    width: 70%;
   }
 
-  .submit-button {
-    margin-bottom: 5px;
-    margin-top: 5px;
+  .chat-container {
+    background-image: url("../assets/chat3.png");
+
   }
 }
 
 @media (min-width: 1025px) {
-  form {
-    width: 50%;
-    margin: 40px auto;
+  .form-desk {
+    display: flex;
+    justify-content: center;
   }
 
-  #newMessageInput {
-    margin-left: 25px;
+  .message-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
   }
 
-  .submit-button {
-    margin-bottom: 5px;
-    margin-top: 5px;
+  .message {
+    display: flex;
+    width: 500px;
   }
 
-  .title {
-    font-size: 60px;
+  .chat-container {
+    background-image: url("../assets/chat3.png");
+    background-position: top;
   }
 
-  .text-label {
-    font-size: 30px;
-  }
-
-  .submit-button {
-    font-size: 20px;
-  }
-
-  .char-count {
-    font-size: 20px;
-  }
 }
