--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -8,6 +8,7 @@
   position: relative;
   overflow: hidden;
   background-color: #ffffff;
+  border-bottom: solid 2px black;
 }
 
 .scrolling-text {
@@ -16,6 +17,11 @@
   white-space: nowrap;
   animation: scroll 10s linear infinite;
   margin: 0%;
+
+}
+
+.under-scroll {
+  border-top: solid 2px black;
 }
 
 @keyframes scroll {
@@ -36,19 +42,227 @@
   margin: 20px 0;
 }
 
-.art-map-container {
-  border-top: 3px solid black;
-  border-bottom: 3px solid black;
-}
-
 .overlay-text {
   position: absolute;
-  text-decoration: underline;
+  text-decoration: underline 2px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 20px;
   text-align: center;
   z-index: 1;
+}
+
+.recent-messages-container {
+  padding: 1rem;
+  background-color: #000000;
+}
+
+.recent-msg-tablet {
+  display: none;
+}
+
+.recent-messages-container h2 {
+  margin-bottom: 1rem;
+  font-family: "Bodoni Moda", serif;
+  font-weight: 100px;
+  font-style: normal;
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+
+.recent-message {
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ffffff;
+  padding-bottom: 0.5rem;
+}
+
+.recent-message-user {
+  margin-right: 0.5rem;
+  color: #ffffff;
+}
+
+.recent-message-text {
+  display: inline;
+  color: #ffffff;
+}
+
+.recent-message-image {
+  display: block;
+  max-width: 100px;
+  margin-top: 0.5rem;
+  color: #ffffff;
+}
+
+.recent-message-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.5rem;
+  color: #ffffff;
+}
+
+@media (min-width:760px) and (max-width: 1024px) {
+  .page {
+    margin: 60px 100px;
+  }
+
+  .scrolling-text {
+    margin-bottom: 20px;
+  }
+
+  .under-scroll {
+    display: none;
+  }
+
+  .tablet-container {
+    display: flex;
+    justify-content: center;
+    margin: 120px 40px;
+    gap: 40px;
+  }
+
+  .art-map-container,
+  .recent-messages-container {
+    box-sizing: border-box;
+    width: 50%;
+  }
+
+  .recent-msg-tablet {
+    display: block;
+    color: #ffffff;
+    text-decoration: underline;
+  }
+
+  .art-map {
+    margin: 0;
+  }
+
+  .art-map a {
+    width: 100%;
+    height: 400px;
+  }
+
+  .homemap-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+@media (min-width: 1025px) {
+  .home-page {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+  }
+
+  .home-desktop {
+    margin: 130px 60px 0;
+    flex-basis: calc(66.666% - 40px);
+    height: 600px;
+  }
+
+  .tablet-container {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #ccc;
+    padding: 20px;
+    flex-basis: calc(31.111% - 30px);
+    margin-right: 20px;
+    height: 800px;
+    z-index: 1;
+  }
+
+  .under-scroll {
+    display: none;
+  }
+
+  .art-map {
+
+    margin-bottom: 0;
+  }
+
+  .homemap-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .art-map a {
+    width: 100%;
+    height: 400px;
+  }
+
+  .recent-messages-container {
+    height: 400px;
+    object-fit: cover;
+    margin-bottom: 20px;
+  }
+
+  .recent-msg-tablet {
+    display: block;
+    color: #ffffff;
+    text-decoration: underline 2px;
+    text-align: center;
+    padding-bottom: 10px;
+  }
+
+  .scrolling-text-container {
+    display: flex;
+    align-items: flex-end;
+    height: 90px;
+    border-bottom: none;
+  }
+
+
+  /*.home-page {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  .tablet-container {
+    background-color: rgb(216, 216, 216);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    gap: 40px;
+  }
+
+  .art-map a {
+    width: 100%;
+    height: 400px;
+  }
+
+  .homemap-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .under-scroll {
+    display: none;
+  }
+
+  .recent-messages-container {
+
+    height: 360px;
+    object-fit: cover;
+  }
+
+  .home-desktop {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 70px;
+  }
+
+  .scrolling-text-container {
+
+    border-bottom: none;
+  }*/
 }
