--- a/src/css/artGallery.css
+++ b/src/css/artGallery.css
@@ -1,8 +1,6 @@
-/*hela sida*/
 .main-content {
   display: flex;
   flex-direction: column;
-  /* Antalet pixlar 'title-art' och 'footer' tar upp */
   align-items: stretch;
 }
 
@@ -25,12 +23,6 @@
 }
 
 /*formen för sök*/
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10px;
-}
 
 .searchTerm:focus {
   color: #000000;
@@ -100,9 +92,82 @@
   color: #333;
 }
 
-.loading-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media (min-width:760px) and (max-width: 1024px) {
+  .title-art {
+    margin: 60px 100px;
+    height: 500px;
+    border: solid 2px black;
+  }
+
+  .searchButton i {
+    font-size: 25px;
+    padding: 10px;
+  }
+
+  .art-container {
+    width: 40%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .map-img {
+    height: 50%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .gallery-item-container {
+    margin-bottom: 50px;
+  }
 }
 
+@media (min-width: 1025px) {
+  .main-content {
+    align-items: center;
+    height: 100vh;
+    background-image: url("../assets/gallery2.png");
+    background-position: top;
+    padding-bottom: 45px;
+  }
+
+  .title-art {
+    margin: 50px 100px;
+    height: 500px;
+    border: solid 2px black;
+    width: 500px;
+  }
+
+  .searchButton i {
+    font-size: 25px;
+    padding: 10px;
+  }
+
+  .art-container {
+    width: 50%;
+    height: 400px;
+    object-fit: cover;
+  }
+
+  .map-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .gallery-item-container {
+    display: flex;
+    width: 500px;
+    height: 500px;
+
+  }
+
+
+}
