--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -11,10 +11,13 @@
 }
 
 .unread-message-text {
-  background-color: red;
-  color: white;
+  color: rgb(0, 0, 0);
   border-radius: 5px;
   padding: 2px 6px;
   font-size: 12px;
   margin-left: 8px;
+}
+
+@media (min-width:760px) and (max-width: 1024px) {
+ 
 }
