--- a/src/css/imageCarousel.css
+++ b/src/css/imageCarousel.css
@@ -19,3 +19,17 @@
 .carousel-text {
   margin: 0;
 }
+
+@media (min-width:760px) and (max-width: 1024px) {
+  .img-container {
+    height: 500px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .img-container {
+    height: 600px;
+   
+
+  }
+}
