--- a/src/css/privateChat.css
+++ b/src/css/privateChat.css
@@ -1,17 +1,16 @@
 .private-chat-container {
-  background-color: rgb(201, 201, 200);
-  padding: 20px;
-  max-width: 600px;
-  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 200px);
   border-radius: 10px;
+  padding-bottom: 38px;
 }
 
 .private-msg {
   background-color: #000000;
-  height: 350px;
-  /* Fixed height for chat window */
+  height: calc(100% - 90px); 
+  padding: 10px;
   overflow-y: auto;
-  /* Enable vertical scrolling */
 }
 
 .private-msg ul {
@@ -22,6 +21,7 @@
 .private-msg li {
   margin: 10px 0;
   display: flex;
+
   width: 100%;
 }
 
@@ -54,3 +54,29 @@ li.right .message-priv {
   background-color: #ffffff;
 }
 
+.fill-button.privet {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-bottom: 46px;
+}
+
+@media (min-width:760px) and (max-width: 1024px) {
+  .private-chat-container {
+    height: calc(100vh - 280px);
+  }
+  
+  .private-msg {
+    height: calc(100% - 150px); 
+  }
+}
+
+
+@media (min-width: 1025px) {
+  .private-chat-container {
+    height: calc(100vh - 400px);
+  }
+  
+  .private-msg {
+    height: calc(100% - 100px); 
+  }
+}
