--- a/src/css/userPage.css
+++ b/src/css/userPage.css
@@ -10,20 +10,6 @@
   margin-bottom: 20px;
 }
 
-.profile-image {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-right: 20px;
-}
-
-.user-info-container {
-  border: 1px solid black;
-  margin: 10px 0;
-  padding: 10px;
-}
-
 .user-info h3 {
   color: black;
 }
@@ -32,31 +18,20 @@
   color: rgb(0, 0, 0);
 }
 
-
-/*.post {
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-}
-
-.post img {
-  width: 100%;
-  height: auto;
-  border-bottom: 1px solid #ddd;
-}
-
-.post p {
-  padding: 10px;
-  font-size: 16px;
-  color: #333;
-}*/
-
 .no-posts-message {
   text-align: center;
   font-size: 18px;
   color: #555;
 }
+
+@media (min-width:760px) and (max-width: 1024px) {
+  .header-container {
+    margin: 30px;
+  }
+
+  .FriendRequestbutton {
+    margin-left: 30px;
+  }
+}
+
+@media (min-width: 1025px) {}
