--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,13 @@
-:root {
-  --primary-color: #D96AA7;
-  --secondary-color: #cbcbcb;
-  --complimentary-color: #88BFB5;
-  --contrast-color: #F2E527;
-  --light-color: #D2A9D9;
-  --fun-color: #cd1cec;
-}
+
 
 body {
   padding: 0;
   margin: 0;
   background-color: #ffffff;
-  overflow-y: auto;
-  /* Prevents vertical scrolling */
+  width: 100%;
+  height: 100vh;
 }
 
-/*Title*/
 h1 {
   color: #000000;
   font-size: 30px;
@@ -93,6 +85,24 @@ p {
   background-color: #333;
 }
 
+.fill-button {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: #000000;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: "Bodoni Moda", serif;
+}
+
+.fill-button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+
 .container-page {
   margin: 10px;
   padding: 10px;
@@ -100,6 +110,7 @@ p {
   border-radius: 8px;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 .container-page h2 {
@@ -124,13 +135,15 @@ p {
   border: 1px solid #000000;
   padding: 10px;
 
-  box-shadow: 7px 7px;
+  background-color: #fff;
 }
 
 .friends-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  height: 400px;
+  overflow: auto;
 }
 
 .friend-item {
@@ -149,6 +162,15 @@ img {
   max-width: 100%;
 }
 
+.profile-image {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+  border: 1px solid black;
+}
+
 .search-bar {
   display: flex;
   align-items: center;
@@ -161,12 +183,15 @@ img {
   padding: 10px;
 }
 
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
 #newMessageInput.searchTerm {
-  width: 100%;
-  flex-grow: 1;
   border: none;
-  outline: none;
-  color: #000000;
 }
 
 .app-footer {
@@ -182,4 +207,251 @@ img {
 
 .footer-content p {
   margin: 0;
+}
+
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+}
+
+.user-info-container {
+  border: 1px solid black;
+  margin: 10px 0;
+  padding: 10px;
+}
+
+.fas,
+.far,
+.fab {
+  font-size: 18px;
+
+}
+
+@media (min-width:760px) and (max-width: 1024px) {
+  h1 {
+    color: #000000;
+    font-size: 40px;
+    font-weight: 600;
+    font-style: normal;
+    letter-spacing: 4px;
+  }
+
+  h2 {
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 4px;
+    color: #333;
+  }
+
+  h3 {
+    font-size: 30px;
+    letter-spacing: 2px;
+    color: white;
+    font-weight: 200;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 200;
+    margin: 0;
+  }
+
+  h5 {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 200;
+  }
+
+  p {
+    letter-spacing: 1px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .arrow-more {
+    margin-top: 10px;
+  }
+
+  .fa-chevron-down {
+    font-size: 30px;
+  }
+
+  .fill-button {
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+
+  .search-bar {
+    width: 73%;
+  }
+
+  .search-bar.my {
+    width: 100%;
+  }
+
+  .search-container {
+    width: 100%;
+  }
+
+  #newMessageInput {
+    padding: 20px;
+    font-family: "Fira Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+  }
+
+  .loading-container {
+    padding: 20px;
+  }
+
+  .user-info-container {
+    width: 70%;
+    margin: 30px;
+    padding: 10px;
+  }
+
+  .fas,
+  .far,
+  .fab {
+    font-size: 25px;
+
+  }
+
+  .profile-image {
+    width: 100px;
+    height: 100px;
+
+  }
+
+  .user-button {
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+
+  .my-form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 30px;
+  }
+
+}
+
+@media (min-width: 1025px) {
+  h1 {
+    color: #000000;
+    font-size: 50px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 4px;
+  }
+
+  h2 {
+    font-size: 40px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 4px;
+    color: #333;
+  }
+
+  h3 {
+    font-size: 30px;
+    letter-spacing: 2px;
+    color: white;
+    font-weight: 200;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 200;
+    margin: 0;
+  }
+
+  h5 {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 200;
+  }
+
+  p {
+    letter-spacing: 1px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+
+  .my-form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin: 30px;
+  }
+
+  .search-bar {
+    width: 100%;
+    background-color: #fff;
+
+  }
+
+  .search-container {
+    width: 500px;
+  }
+
+  #newMessageInput {
+    padding: 20px;
+    font-family: "Fira Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+  }
+
+  .arrow-more {
+    margin-top: 10px;
+  }
+
+  .fa-chevron-down {
+    font-size: 30px;
+  }
+
+  .fas,
+  .far,
+  .fab {
+    font-size: 25px;
+  }
+
+  .arrow-more-draw {
+    display: none;
+  }
+
+  .profile-image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .user-info-container {
+    width: 500px;
+    margin-top: 30px;
+    padding: 10px;
+    background-color: #fff;
+
+  }
+
+  .user-button {
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+
+  .fill-button {
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+
+  .container-page {
+    max-height: calc(100vh - 510px);
+    overflow-y: auto;
+  }
 }
