--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,21 +3,15 @@
   background-color: #000000;
 }
 
-
 .scrolling-text-container {
-  position: relative;
-  overflow: hidden;
   background-color: #ffffff;
   border-bottom: solid 2px black;
+  overflow: hidden;
 }
 
 .scrolling-text {
-  bottom: 0;
-  left: 0;
   white-space: nowrap;
   animation: scroll 10s linear infinite;
-  margin: 0%;
-
 }
 
 .under-scroll {
@@ -36,9 +30,6 @@
 
 .art-map {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 20px 0;
 }
 
@@ -107,10 +98,6 @@
     margin: 60px 100px;
   }
 
-  .scrolling-text {
-    margin-bottom: 20px;
-  }
-
   .under-scroll {
     display: none;
   }
@@ -135,6 +122,7 @@
   }
 
   .art-map {
+    display: flex;
     margin: 0;
   }
 
@@ -154,15 +142,18 @@
   .home-page {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
     padding: 20px;
   }
 
+  .page{
+    margin: 0;
+  }
+
   .home-desktop {
-    margin: 130px 60px 0;
     flex-basis: calc(66.666% - 40px);
-    height: 600px;
+    height: 800px;
   }
 
   .tablet-container {
@@ -181,7 +172,7 @@
   }
 
   .art-map {
-
+    display: flex;
     margin-bottom: 0;
   }
 
@@ -213,56 +204,7 @@
   .scrolling-text-container {
     display: flex;
     align-items: flex-end;
-    height: 90px;
+    height: 140px;
     border-bottom: none;
   }
-
-
-  /*.home-page {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
-
-  .tablet-container {
-    background-color: rgb(216, 216, 216);
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    gap: 40px;
-  }
-
-  .art-map a {
-    width: 100%;
-    height: 400px;
-  }
-
-  .homemap-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .under-scroll {
-    display: none;
-  }
-
-  .recent-messages-container {
-
-    height: 360px;
-    object-fit: cover;
-  }
-
-  .home-desktop {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 70px;
-  }
-
-  .scrolling-text-container {
-
-    border-bottom: none;
-  }*/
 }
