--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -2,37 +2,16 @@
   background-color: #fff;
 }
 
-.navbar {
-  background-color: #000000;
-  color: #fff;
-  padding: 0px;
-  display: flex;
-  flex-direction: column;
-}
-
-.navList {
-  list-style-type: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-around;
-}
-
-.nav-item p {
-  padding: 8px 16px;
-}
-
-.nav-item p:hover {
-  background-color: #d2d2d2;
-  color: black;
-}
-
-
-
 .navbar-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+}
+
+.navbar-button button {
+  background-color: transparent;
+  border: none;
 }
 
 .brand-mark {
@@ -47,6 +26,29 @@
   font-weight: 100;
   padding: 5px;
   letter-spacing: 20px;
+}
+
+.navbar {
+  background-color: #000000;
+  color: #fff;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.navList {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-item {
+  padding: 8px 16px;
+}
+
+.nav-item :hover {
+  color: #a1a5a9;
 }
 
 .sub-menu-row {
@@ -75,7 +77,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  border: none;
 }
 
 .user-menu .link {
@@ -83,24 +84,7 @@
   text-decoration: none;
 }
 
-.navbar-button .btn {
-  font-size: 18px;
-  background-color: transparent;
-  border: none;
-}
-
-.navbar-button .user-icon-btn {
-  font-size: 18px;
-  background-color: transparent;
-  border: none;
-}
-
 @media (min-width:760px) and (max-width: 1024px) {
-  .navbar-button .user-icon-btn {
-    margin: 20px;
-
-  }
-
   .user-menu {
     padding: 15px;
   }
@@ -110,53 +94,16 @@
   }
 
   .sub-menu-row {
-    display: flex;
-    justify-content: space-around;
-
     border-top: 5px solid#fff;
-    padding-top: 10px;
   }
 
   .brand-mark {
-    display: inline-block;
     width: 50px;
     height: 50px;
-    border-radius: 50%;
-    background-color: #000000;
-    color: #fff;
-    text-align: center;
     line-height: 50px;
-    padding: 5px;
   }
 }
 
-/*@media (min-width: 1025px) and (max-width: 1080px) {
- .user-menu {
-    position: absolute;
-    bottom: 80.6%;
-    left: 27%;
-    width: 71.2%;
-    z-index: 1;
-  }*/
-
-/*.home .navbar {
-    position: absolute;
-    bottom: 79.4%;
-    left: 29%;
-    width: 72.2%;
-    z-index: 1;
-  }*/
-
-/*.sub-menu-row {
-    position: absolute;
-    background-color: #000000;
-    bottom: -70%;
-    left: 0%;
-    width: 101.2%;
-    z-index: 1;
-  }
-}
-*/
 @media (min-width: 1025px) {
   .navbar-header {
     padding: 0 20px;
@@ -177,31 +124,4 @@
     line-height: 50px;
     padding: 5px;
   }
-
 }
-
-/*.user-menu {
-    position: absolute;
-    bottom: 80.6%;
-    left: 30.4%;
-    width: 68%;
-    z-index: 1;
-  }
-
-  .navbar {
-    position: absolute;
-    bottom: 79.4%;
-    left: 30%;
-    width: 70%;
-    z-index: 1;
-
-  }
-
-  .sub-menu-row {
-    position: absolute;
-    background-color: #000000;
-    bottom: -70%;
-    left: 0%;
-    width: 100%;
-    z-index: 1;
-  }*/
