--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
-
+:root {
+  --icon-color: #333;
+  --icon-color-hover: #a1a5a9;
+}
 
 body {
   padding: 0;
   margin: 0;
   background-color: #ffffff;
-  width: 100%;
-  height: 100vh;
 }
 
 h1 {
@@ -59,6 +60,10 @@ p {
   margin-top: 0px;
 }
 
+.arrow-more-draw {
+  margin-top: 20px;
+}
+
 .fa-chevron-down {
   font-size: 20px;
   margin-bottom: 10px;
@@ -102,7 +107,6 @@ p {
   cursor: not-allowed;
 }
 
-
 .container-page {
   margin: 10px;
   padding: 10px;
@@ -110,7 +114,6 @@ p {
   border-radius: 8px;
   border: 1px solid #ccc;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
 }
 
 .container-page h2 {
@@ -124,6 +127,7 @@ p {
   font-family: "Fira Mono", monospace;
   font-weight: 400;
   font-style: normal;
+  background-color: #fff;
 }
 
 #newMessageInput:focus {
@@ -134,7 +138,6 @@ p {
 .my-form {
   border: 1px solid #000000;
   padding: 10px;
-
   background-color: #fff;
 }
 
@@ -155,7 +158,6 @@ p {
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 img {
@@ -226,49 +228,39 @@ img {
 .far,
 .fab {
   font-size: 18px;
+  text-decoration: none;
+  color: var(--icon-color);
+}
 
+.fas:hover,
+.far:hover,
+.fab:hover {
+  color: var(--icon-color-hover);
 }
 
 @media (min-width:760px) and (max-width: 1024px) {
   h1 {
-    color: #000000;
     font-size: 40px;
-    font-weight: 600;
-    font-style: normal;
-    letter-spacing: 4px;
   }
 
   h2 {
     font-size: 40px;
-    font-weight: 500;
-    font-style: normal;
-    letter-spacing: 4px;
-    color: #333;
   }
 
   h3 {
     font-size: 30px;
-    letter-spacing: 2px;
-    color: white;
-    font-weight: 200;
   }
 
   h4 {
     font-size: 20px;
-    font-weight: 200;
-    margin: 0;
   }
 
   h5 {
-    margin: 0;
     font-size: 18px;
-    font-weight: 200;
   }
 
   p {
-    letter-spacing: 1px;
     font-size: 20px;
-    font-weight: 500;
   }
 
   .arrow-more {
@@ -279,9 +271,31 @@ img {
     font-size: 30px;
   }
 
+  .user-button {
+    padding: 20px 30px;
+    font-size: 20px;
+  }
+
   .fill-button {
     padding: 20px 30px;
     font-size: 20px;
+  }
+
+  #newMessageInput {
+    padding: 20px;
+    font-size: 20px;
+  }
+
+  .my-form {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 30px;
+  }
+
+  .profile-image {
+    width: 100px;
+    height: 100px;
   }
 
   .search-bar {
@@ -296,14 +310,6 @@ img {
     width: 100%;
   }
 
-  #newMessageInput {
-    padding: 20px;
-    font-family: "Fira Mono", monospace;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 20px;
-  }
-
   .loading-container {
     padding: 20px;
   }
@@ -311,7 +317,6 @@ img {
   .user-info-container {
     width: 70%;
     margin: 30px;
-    padding: 10px;
   }
 
   .fas,
@@ -320,92 +325,31 @@ img {
     font-size: 25px;
 
   }
-
-  .profile-image {
-    width: 100px;
-    height: 100px;
-
-  }
-
-  .user-button {
-    padding: 20px 30px;
-    font-size: 20px;
-  }
-
-  .my-form {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    margin: 30px;
-  }
-
 }
 
 @media (min-width: 1025px) {
   h1 {
-    color: #000000;
     font-size: 50px;
     font-weight: 500;
-    font-style: normal;
-    letter-spacing: 4px;
   }
 
   h2 {
     font-size: 40px;
-    font-weight: 500;
-    font-style: normal;
-    letter-spacing: 4px;
-    color: #333;
   }
 
   h3 {
     font-size: 30px;
-    letter-spacing: 2px;
-    color: white;
-    font-weight: 200;
   }
 
   h4 {
     font-size: 20px;
-    font-weight: 200;
-    margin: 0;
   }
 
   h5 {
-    margin: 0;
     font-size: 20px;
-    font-weight: 200;
   }
 
   p {
-    letter-spacing: 1px;
-    font-size: 20px;
-    font-weight: 500;
-  }
-
-
-  .my-form {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    margin: 30px;
-  }
-
-  .search-bar {
-    width: 100%;
-    background-color: #fff;
-
-  }
-
-  .search-container {
-    width: 500px;
-  }
-
-  #newMessageInput {
-    padding: 20px;
-    font-family: "Fira Mono", monospace;
-    font-weight: 400;
-    font-style: normal;
     font-size: 20px;
   }
 
@@ -417,27 +361,8 @@ img {
     font-size: 30px;
   }
 
-  .fas,
-  .far,
-  .fab {
-    font-size: 25px;
-  }
-
   .arrow-more-draw {
     display: none;
-  }
-
-  .profile-image {
-    width: 200px;
-    height: 200px;
-  }
-
-  .user-info-container {
-    width: 500px;
-    margin-top: 30px;
-    padding: 10px;
-    background-color: #fff;
-
   }
 
   .user-button {
@@ -453,5 +378,43 @@ img {
   .container-page {
     max-height: calc(100vh - 510px);
     overflow-y: auto;
+  }
+
+  #newMessageInput {
+    padding: 20px;
+    font-size: 20px;
+  }
+
+  .my-form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    margin: 30px;
+  }
+
+  .profile-image {
+    width: 200px;
+    height: 200px;
+  }
+
+  .search-bar {
+    width: 100%;
+    background-color: #fff;
+  }
+
+  .search-container {
+    width: 500px;
+  }
+
+  .user-info-container {
+    width: 500px;
+    margin-top: 30px;
+    background-color: #fff;
+  }
+
+  .fas,
+  .far,
+  .fab {
+    font-size: 25px;
   }
 }
